--- a/style.css
+++ b/style.css
@@ -330,4 +330,11 @@ h1 { font-size: 10vw; }
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
   }
+  .header h2{
+    text-align: center;
+    font-size: 1.5rem;
+  }
+  .ver-mas-container{
+    gap: 1rem;
+  }
 }
