--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ p, .card p {
   font-family: 'Work Sans', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  color: yellow;
+  color: white;
   font-weight: 400;
   text-transform: none;
   margin: 0 10px 10px;
